# rust-crud-api

./: .gitignore  Cargo.toml
src/: main.rs
src/config/: db.rs
src/dto/: create_user_request.rs  mod.rs  update_user_request.rs
src/handler/: user_handler.rs
src/model/: user.rs
src/repository/: user_repository.rs
src/service/: user_service.rs
