[package]
name = "rust-crud-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }

sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "uuid",
    "chrono"
] }
dotenvy = "0.15"